terraform/ecs/con-alb/target-group.tf
resource "aws_lb_target_group" "this" {
  name        = "ecs-tg"
  port        = 3000
  protocol    = "HTTP"
  vpc_id      = var.vpc_id
  target_type = "ip"

  health_check {
    path = "/"
  }
}
